Server (#10)
* создал классы для сервера и клиента

* перевел в 18 версию java

* написал часть подключения сервера к клиенту, написал через датаграммы(вроде нужно было через сетевой канал)

* написал отправление сообщений с сервера

* написал отправление сообщений с сервера

* написал часть функционала сторедж интерфейса

* фиг его знает, вроде написал часть с приемом сообщения на сервере

* дописал обработку двух запросов, теперь вроде понятно как это будет работать

* исправил команды на правильное использование стореджа

* частично работающие сервер и клиент

* добавляю отправку ответа от сервера для команд

* реализовал команды, нужно написать нормальную обработку исключений

* исправил обращение к стореджу в методе getCitiesList

* убрал лишние импорты